# mirai_bot_lts

./: Cargo.toml  README.md  package.json
src/: bot.rs  bot_handler.rs  log.rs  main.rs  main.ts
src/bot/: bot.controller.ts  bot.module.ts
src/bot/mirai-bot/: mirai-bot.service.ts  mirai-bot.spec.ts
src/mirai_bot/: color.rs  guild.rs  image.rs  mod.rs  monokuma_announcement.rs  on_new_member.rs
src/utils/: guild_fcts.rs  mod.rs  time.rs  wait.ts
tests/: test_bot.rs
